--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "@aws-sdk/s3-request-presigner": "^3.0.0",
     "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/s3-request-presigner": "^3.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.0.0"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
